--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# Details for our datasource
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+#Enter your password here
+spring.datasource.password =
 
+# Hibernate properties
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.show-sql = true
