[LMS] Add entities and enums, reformat code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 # Details for our datasource
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 #Enter your password here
-spring.datasource.password =
-
+spring.datasource.password=admin123
 # Hibernate properties
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.show-sql = true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.show-sql=true
